--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production gulp dist",
-    "deploy": "surge -p dist -d thehaze.surge.sh",
+    "deploy": "surge -p dist -d example-tour.surge.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.2.1",
-    "normalize.css": "^8.0.0"
+    "normalize.css": "^8.0.0",
+    "owl.carousel": "^2.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
